Fix - style changes / folder mishap fix

--- a/site/index.html
+++ b/site/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>Hettiarachchi Surgicals</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#products">Products</a></li>
-        <li><a href="#location">Location</a></li>
-      </ul>
-    </nav>
+    <div class="hero">
+      <h1>Hettiarachchi Surgicals</h1>
+      <p class="subtitle">Empowering Healthcare with Quality Surgical Consumables</p>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#location">Location</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main>
     <section id="about">
